Media queries on new grid
- update ol in #steps
- update principles content, add intro

--- a/libs/jade/principles.jade
+++ b/libs/jade/principles.jade
@@ -12,6 +12,7 @@ block breadcrumbs
 block content
 	.articleContent.row
 		.span8
+			p.u-lede These design principles are rooted in our #[a(href="#") advice proposition] by referring back to them and developing from them, along with our #[a(href="#") content style guide] we will create a consistent and valuable digital advice service. 
 			#overview.steps
 				h3 On this page
 					ol
@@ -24,7 +25,7 @@ block content
 						li
 							a(href="#principle4") Help people solve a problem (do the hard work)
 						li
-							a(target="_blank", href="#principle5") Be honest
+							a(href="#principle5") Be honest
 						li
 							a(href="#principle6") Design should be minimal/unobtrusive
 							br
@@ -33,10 +34,16 @@ block content
 							a(href="#principle7") Iterate based on data and feedback (not assumptions)
 
 			h2#principle1 Design for users needs
-			p Designing for user needs is the first and most important design principle. People use our service to solve real life problems, start by capturing problems
-			p#principle2 Inclusion of our two main audiences, clients and advisers, also users of varying abilities and of differing devices
-			p#principle3 It’s important to remember we can’t solve all problems online, and as we see from data, most clients have multiple problems, if we can solve the most common cases online or through digital assistance then we can free adviser time to tackle the most complex issues
-			p#principle4 We are not wikipedia, we are not the government. Our job is to help people through the best way to problem resolution. We don’t need to explain what a benefit is, users searching will already know or will find other places that information is explained. Where possible help and show and where necessary direct.
-			p#principle5 Be honest, always. If a problem is going to take a long time say so. If we are trying new ways of advising say so, as for feedback, encourage engagement.
-			p#principle6 Don’t get in the way, many visitors are in serious situations or difficult circumstances. Design should be used to explain or direct, it needs to be clear, simple, useful and practical not decorative or distracting.
-			p#principle7 Design is continuous. Be agile, review, iterate, improve 
+			p Designing for user needs is the first and most important design principle. People use our service to solve real life problems, start by capturing problems.
+			h2#principle2 Design for inclusion
+			p Inclusion of our two main audiences, clients and advisers, also users of varying abilities and of differing devices.
+			h2#principle3 Design for common case (happy path)
+			p It’s important to remember we can’t solve all problems online, and as we see from data, most clients have multiple problems, if we can solve the most common cases online or through digital assistance then we can free. adviser time to tackle the most complex issues.
+			h2#principle4 Help people solve a problem (do the hard work)
+			p We are not wikipedia, we are not the government. Our job is to help people through the best way to problem resolution. We don’t need to explain what a benefit is, users searching will already know or will find other places that information is explained. Where possible help and show and where necessary direct.
+			h2#principle5 Be honest
+			p Be honest, always. If a problem is going to take a long time say so. If we are trying new ways of advising say so, as for feedback, encourage engagement.
+			h2#principle6 Design should be minimal/unobtrusive
+			p Don’t get in the way, many visitors are in serious situations or difficult circumstances. Design should be used to explain or direct, it needs to be clear, simple, useful and practical not decorative or distracting.
+			h2#principle7 Iterate based on data and feedback (not assumptions)
+			p Design is continuous. Be agile, review, iterate, improve.
