--- a/libs/modules/nav-steps.less
+++ b/libs/modules/nav-steps.less
@@ -19,7 +19,7 @@
         font-size: 1.1rem;
         margin-bottom: @box-spacing-vertical*1.25;
     }
-    ul {
+    ul, ol {
         margin: 0;
         //padding: 0 1rem;
         padding: 0.25rem 2rem;
