--- a/libs/base/simplegrid.less
+++ b/libs/base/simplegrid.less
@@ -8,13 +8,15 @@
 @gutters:	@box-spacing*2;
 
 .row {
-    margin: 0 -@gutters @gutters 0;
-    clear: both;
-    padding: 0;
-    overflow: hidden;
-    // Create IE7&8 gutters. Only needed if gutter 
-    // value is in modern units
-    margin-bottom: 2%\9 !important;
+    @media (min-width:@breakpoint-sm){
+        margin: 0 -@gutters @gutters 0;
+        clear: both;
+        padding: 0;
+        overflow: hidden;
+        // Create IE7&8 gutters. Only needed if gutter 
+        // value is in modern units
+        margin-bottom: 2%\9 !important;
+    }
 }
 
 // Create mixin
@@ -23,17 +25,20 @@
 .col(@x;@y;) {
 	float: left;
 
-	// Create calc grid for modern browsers
-	width: calc(percentage((@x/@y)) ~"-"@gutters);
-	margin-right: @gutters;
+    width: @full-page-width;
+    @media (min-width:@breakpoint-sm){
+    	// Create calc grid for modern browsers
+    	width: calc(percentage((@x/@y)) ~"-"@gutters);
+    	margin-right: @gutters;
 
-	// Create IE8 fallback. Due to lack of calc() support
-	// columns use an extra 2% as a gutter
-	width: unit(percentage((@x/@y)) - 2, ~"%\9");
-	// Create IE7 fallback. IE7 has a hard time with
-	// decimal places in percentages
-	*width: unit(floor(percentage((@x/@y)) - 2), ~"%\9 !important");
-	margin-right: 2%\9 !important;
+    	// Create IE8 fallback. Due to lack of calc() support
+    	// columns use an extra 2% as a gutter
+    	width: unit(percentage((@x/@y)) - 2, ~"%\9");
+    	// Create IE7 fallback. IE7 has a hard time with
+    	// decimal places in percentages
+    	*width: unit(floor(percentage((@x/@y)) - 2), ~"%\9 !important");
+    	margin-right: 2%\9 !important;
+    }
 
 	// Remove bottom margin from the last nested row, to
 	// keep vertical spacing consistent
