Added html examples to callout

--- a/libs/jade/callout.jade
+++ b/libs/jade/callout.jade
@@ -110,6 +110,17 @@ block content
 						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 			pre
 				code.language-html
+					| &lt;div class="callout"&gt;
+					| 	&lt;h3&gt;Callout&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+					| 	&lt;div class="callout--quote"&gt;
+					| 		&lt;h3&gt;This is a quote&lt;/h3&gt;
+					| 		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+					| 	&lt;/div&gt;
+					| 	&lt;div class="callout--alert"&gt;
+					| 		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+					| 	&lt;/div&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
 				.callout--quote
@@ -120,6 +131,14 @@ block content
 						p Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
 			pre
 				code.language-html
+					| &lt;div class="callout--quote"&gt;
+					| 	&lt;h3&gt;This is a quote&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+					| 	&lt;div class="callout--warning"&gt;
+					| 		&lt;h3&gt;Callout warning&lt;/h3&gt;
+					| 		&lt;p&gt;Lorem ipsum dolor sit amet, consectetuer adipiscing elit.&lt;/p&gt;
+					| 	&lt;/div&gt;
+					| &lt;/div&gt;
 
 			h2 Brand callout styles
 			p Below are examples of callout styles utilising the brand colour palette.
@@ -130,21 +149,33 @@ block content
 					h3 Callout heritage
 			pre
 				code.language-html
+					| &lt;div class="callout--heritage"&gt;
+					| 	&lt;h3&gt;Callout heritage&lt;/h3&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
 				.callout--responsible
 					h3 Callout responsible
 			pre
 				code.language-html
+					| &lt;div class="callout--responsible"&gt;
+					| 	&lt;h3&gt;Callout responsible&lt;/h3&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
 				.callout--inventive
 					h3 Callout inventive
 			pre
 				code.language-html
+					| &lt;div class="callout--inventive"&gt;
+					| 	&lt;h3&gt;Callout inventive&lt;/h3&gt;
+					| &lt;/div&gt;
 
 			.example-box-plain
 				.callout--generous
 					h3 Callout generous
 			pre
 				code.language-html
+					| &lt;div class="callout--generous"&gt;
+					| 	&lt;h3&gt;Callout generous&lt;/h3&gt;
+					| &lt;/div&gt;
