Small fix for brand callouts

--- a/libs/jade/callout.jade
+++ b/libs/jade/callout.jade
@@ -147,35 +147,43 @@ block content
 			.example-box-plain
 				.callout--heritage
 					h3 Callout heritage
+					p Lorem ipsum.
 			pre
 				code.language-html
 					| &lt;div class="callout--heritage"&gt;
 					| 	&lt;h3&gt;Callout heritage&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
 					| &lt;/div&gt;
 
 			.example-box-plain
 				.callout--responsible
 					h3 Callout responsible
+					p Lorem ipsum.
 			pre
 				code.language-html
 					| &lt;div class="callout--responsible"&gt;
 					| 	&lt;h3&gt;Callout responsible&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
 					| &lt;/div&gt;
 
 			.example-box-plain
 				.callout--inventive
 					h3 Callout inventive
+					p Lorem ipsum.
 			pre
 				code.language-html
 					| &lt;div class="callout--inventive"&gt;
 					| 	&lt;h3&gt;Callout inventive&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
 					| &lt;/div&gt;
 
 			.example-box-plain
 				.callout--generous
 					h3 Callout generous
+					p Lorem ipsum.
 			pre
 				code.language-html
 					| &lt;div class="callout--generous"&gt;
 					| 	&lt;h3&gt;Callout generous&lt;/h3&gt;
+					| 	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
 					| &lt;/div&gt;
