Linked to principles in index

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -13,7 +13,7 @@ block content
 				h2#principles Design principles
 				ul
 					li
-						a(href="#") Design principles
+						a(href="principles.html") Design principles
 		.row
 			.span3
 				h2#atoms Atoms
