--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -177,6 +177,7 @@ pre[class*="language-"] {
     .callout--border;
     margin-top: 0;
     border-radius: 0 0 @form-border-radius @form-border-radius;
+    font-size: .85rem;
 }
 
 /***************************************************************************
