Created template/sharebar.jade and set it up as a variable in the template, updating the pages that used it

--- a/libs/jade/advisor.jade
+++ b/libs/jade/advisor.jade
@@ -1,21 +1,22 @@
 block settings
 	- var title = "Advisor content"
 	- var sidebar = true
+	- var toolbars = true
 
 extends ../template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
-		{title: "Layout"}, 
+		{title: "Templates", href: "index.html#templates"},
 		{title: "Advisor content"}])
 
 block sidebar
 	- var section = "Section title"
 	// Set the number at the end to the array position of the active page
 	+sidebar([
-		{title: "Sibling page 1", href: "long-form.html"},
-		{title: "Sibling page 2", href: "index.html"}],
+		{title: "Sibling page 1"},
+		{title: "Sibling page 2"}],
 		0)
 
 	#advisorInline1--box.advisor--box
@@ -25,8 +26,6 @@ block sidebar
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 
 block content
-	include ../template/toolbar.jade
-
 	.articleContent
 		div
 			p Introduction is optional, but for a long format advice page it can be useful to summarise the pages content, this should be kept as a relatively short paragraph that covers what this page of content will do.
