--- a/libs/jade/extent.jade
+++ b/libs/jade/extent.jade
@@ -8,6 +8,8 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"}, 
+		{title: "Organisms", href: "index.html#organisms"}, 
+		{title: "Modals", href: "index.html#modals"}, 
 		{title: "Extent switcher"}])
 
 block sidebar
