Fixed lede text

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -6,7 +6,9 @@ block breadcrumbs
 
 block content
 	.articleContent
-		p.p-lede This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.
+		.row
+			.span8
+				p.u-lede This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.
 
 		.row
 			.span12
