Removed section noticed from jade template, replaced with 'block section-notice'

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -47,6 +47,8 @@ block content
 						a(href="callout.html") Callout
 					li
 						a(href="collapse.html") Collapse
+					li
+						a(href="section-notice.html") Section Notices
 			.span3
 				h2#organisms Organisms
 				ul
