--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -52,13 +52,7 @@ html
 			nav.main-breadcrumb
 				block breadcrumbs
 
-			aside.section-notice
-				h2.screenreader Notice
-
-				.section-notice__content
-					p
-						span.badge NEW
-						| &nbsp;This page is part of #[a(href="#") our new approach to digital advice].
+			block section-notice
 
 			.main-content
 				if sidebar
