Made cookie monster a toggle, using var cookiemonster = true

--- a/libs/jade/long-form.jade
+++ b/libs/jade/long-form.jade
@@ -2,6 +2,7 @@ block settings
 	- var title = "Long form advice content page"
 	- var sidebar = true
 	- var toolbars = true
+	- var cookiemonster = true
 
 extends ../template/template.jade
 
