--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -54,6 +54,8 @@ block content
 				ul
 					li
 						a(href="toolbar.html") Content toolbar
+					li
+						a(href="cookie-monster.html") Cookie Monster
 					li 
 						h4#modals Modals
 						ul
