--- a/libs/jade/long-form.jade
+++ b/libs/jade/long-form.jade
@@ -20,6 +20,14 @@ block sidebar
 		{title: "Sibling page 2"}],
 		0)
 
+block section-notice
+	aside.section-notice
+		h2.screenreader Notice
+		.section-notice__content
+			p
+				span.badge NEW
+				| This page is part of #[a(href="#") our new approach to digital advice].
+				
 block content
 	.articleContent
 		div
