--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -45,7 +45,7 @@ html
 
 		header.main-header
 			.main-header__content.main-content
-				a.main-header__logo.no-print(href="", title="Citizens Advice home")
+				a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
 					img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="assets/images/ca-logo_100px.svg")
 				img.print-only.logo(src="assets/images/ca-logo-hz-280px.svg")
 
