Created section-index.jade to reaplce consumer-index.html

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -70,5 +70,7 @@ block content
 				ul
 					li
 						a(href="long-form.html") Long form content
+					//li
+					//	a(href="advisor.html") Advisor content
 					li
-						a(href="advisor.html") Advisor content
+						a(href="section-index.html") Section index
