Small fixes for gh-pages

--- a/libs/jade/colours.jade
+++ b/libs/jade/colours.jade
@@ -43,6 +43,7 @@ block content
 						| @responsible-aqua
 						br
 						| #90CE9C
+			.row
 				.span3.swatch.swatch--brand--inventive-teal
 					p Inventive Teal
 						br
@@ -125,6 +126,7 @@ block content
 						| @yellow
 						br
 						| #FFBF47
+			.row
 				.span3.swatch.swatch--beta--green
 					p Green
 						br
@@ -172,6 +174,7 @@ block content
 						| @orange-lighter
 						br
 						| #FBCAB1
+			.row
 				.span3.swatch.swatch--beta--green-light
 					p Green Light
 						br
@@ -202,6 +205,7 @@ block content
 						| @blue-darker
 						br
 						| #002D4A
+			.row
 				.span3.swatch.swatch--beta--aqua-light
 					p Aqua Light
 						br
@@ -249,6 +253,7 @@ block content
 						| @gray-3
 						br
 						| #808080
+			.row
 				.span3.swatch.swatch--mono--gray4
 					p Gray 4
 						br
@@ -273,6 +278,7 @@ block content
 						| @gray-7
 						br
 						| #EEEEEE
+			.row
 				.span3.swatch.swatch--mono--gray8
 					p Gray 8
 						br
