--- a/libs/modules/cookie-monster.less
+++ b/libs/modules/cookie-monster.less
@@ -18,6 +18,11 @@
     &__content {
         .limit-width();
         overflow: hidden;
+        position: relative;
+        padding: @box-spacing 0;
+        @media (min-width:@breakpoint-sm){
+            padding: 0;
+        }
         p {
             margin: 0;
             padding: 0 @box-spacing*7 0 @box-spacing/2;
