--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -32,7 +32,7 @@ block content
 							li
 								a(href="buttons.html") Buttons
 							li
-								a(href="Fields.html") Fields
+								a(href="fields.html") Fields
 					li 
 						h4#grid Grid
 						ul
