Bug fixes and typos

--- a/libs/jade/long-form.jade
+++ b/libs/jade/long-form.jade
@@ -54,7 +54,7 @@ block content
 						li
 							a(href="#step8") Eigth use of &lt;h2&gt; in content
 			section#step1
-				h2#h-what-you-could-get-from-the-airline.ref-heading
+				h2.ref-heading
 					span.ref-heading__heading First use of &lt;h2&gt; in content 
 					span.ref-heading__toggle.ref-heading__toggle--on
 						a.js-toggle-ref(href="#!") Added
