Created mockup of adviser content, popup and pages

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -117,6 +117,9 @@
 .help-button-icon {
     .btn-icon("\f128");
 }
+.close-button-icon {
+    .btn-icon("\f00d");
+}
 // Social
 .a-social- {
     .icon-fa;
