--- a/libs/base/buttons.less
+++ b/libs/base/buttons.less
@@ -261,7 +261,7 @@ button:disabled {
 // Multiple buttons in a set 
 
 .btn-group {
-    display: inline-block;
+    display: inline-table;
     white-space: nowrap;
     margin: @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 @box-spacing-horizontal*.5 0;
     .btn {
@@ -269,6 +269,7 @@ button:disabled {
         margin: 0;
         margin-right: 1px;
         display: inline-block;
+        //border-right: 1px solid rgba(255, 255, 255, 0.25);
     }
     & >:first-child {
         border-radius: 2px 0 0 2px;
@@ -276,5 +277,6 @@ button:disabled {
     & >:last-child {
         border-radius: 0 2px 2px 0;
         margin: 0;
+        border: none;
     }
 }
