Created adviser.less and began populating adviser.html with real content

--- a/libs/site.less
+++ b/libs/site.less
@@ -83,6 +83,7 @@
 @import "modules/page-tree";
 @import "modules/share-bar";
 @import "modules/overlay";
+@import "modules/adviser";
 
 /* Print styles */
 @media print {
