--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -291,34 +291,13 @@ blockquote {
   }
 }
 
-@advisor-color: #b9b9a4;
-
-span[id*="overlay_button"] {
-    cursor: help;
-    padding: 0 .25em;
-    //display: inline-block;
-    border-bottom: 1px solid @heritage-yellow;
-    background-color: @heritage-yellow-lighter;
-    //box-shadow: 0.25em 0 0 tint(@advisor-color, 75%),
-    //            -.25em 0 0 tint(@advisor-color, 75%);
-}
-
-.adviser {
-    color: @heritage-blue;
-    font-weight: @font-weight-bold;
-    &:before {
-        content: "\00a0\f059\00a0";
-        font-family: 'Helvetica', 'FontAwesome';
-    }
-}
-
 .advisor--box {
     position: relative;
     .main-content__sidebar;
-    .callout(@gray-8,@callout-border:@advisor-color);
+    .callout(@gray-8,@callout-border:#b9b9a4);
     border-right: @box-spacing/2 solid;
     display: none;
-    border-color: @advisor-color;
+    border-color: #b9b9a4;
     margin: 0;
 }
 
@@ -345,7 +324,7 @@ span[id*="overlay_button"] {
     .btn-icon("\f06e",@border:no-border);
     margin-right: -1em;
     &:after {
-        background-color: @advisor-color;
+        background-color: #b9b9a4;
         width: 2em;
         cursor: pointer;
     }
@@ -359,7 +338,7 @@ div.tooltip {
     z-index: 1000000;
     width: 300px;
     //border-radius: 2px;
-    border-bottom: 8px solid @advisor-color;
+    border-bottom: 8px solid #b9b9a4;
     padding: 10px;
     -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.3);
     -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.3);
