--- a/libs/modules/overlay.less
+++ b/libs/modules/overlay.less
@@ -50,7 +50,7 @@
 		//border-bottom: 1px solid @gray-6;
 		padding: @box-spacing-vertical 0 @box-spacing-vertical 0;
 		//background-color: @heritage-blue-lightest;
-		&:extend(h3);
+		//&:extend(h3);
 		position: relative;
 		-webkit-flex-shrink: 0;
 		-ms-flex-negative: 0;
